--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <td style="width: 127.305px;"><a href="batmanbegins.html"><img title="Batman Begins" src="images/batmanbeginsbutton.png"  onmouseover="this.src='images/batmanbegins.png'" onmouseout="this.src='images/batmanbeginsbutton.png'" alt="Batman Begins" /></a></td>
 <td style="width: 127.305px;"><a href="thedarkknight.html"><img title="The Dark Knight" src="images/darkknightbutton.png"  onmouseover="this.src='images/thedarkknight.png'" onmouseout="this.src='images/darkknightbutton.png'" alt="The Dark Knight" /></a></td>
 <td style="width: 127.305px;"><a href="thedarkknightrises.html"><img title="The Dark Knight Rises" src="images/darkknightrisesbutton.png"  onmouseover="this.src='images/thedarkknightrises.png'" onmouseout="this.src='images/darkknightrisesbutton.png'"  alt="The Dark Knight Rises" /></a></td>
+<td style="width: 127.305px;"><a href="references.html"><img title="References" src="images/referencesbutton.png"  onmouseover="this.src='images/references.png'" onmouseout="this.src='images/referencesbutton.png'" alt="The Dark Knight" alt="References" /></a></td>
 </tr>
 <tr>
 <td style="width: 127.305px;" colspan="5">&nbsp;
